--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Finnish fiction'
 - !lcc 'PH'
+- GITenberg
 title: 'Jälkipoimintoja 2: Omistaan eläjiä'
 url: http://www.gutenberg.org/ebooks/44937
